objects/Billboard_Invoice_Line_Item__c/Billboard_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This is Billboard  Invoice Line Item object. It is child object of Billboard  Invoice.</description>
    <label>Billboard Invoice Line Item</label>
    <nameField>
        <displayFormat>BBILI{00000}</displayFormat>
        <label>BBILI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billboard Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>