objects/Billboard_Invoice_Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>