objects/Billboard_Invoice_Line_Item__c/fields/Billboard_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Invoice__c</fullName>
    <label>Billboard Invoice</label>
    <referenceTo>Billboard_Invoice__c</referenceTo>
    <relationshipLabel>Billboard Invoice Line Items</relationshipLabel>
    <relationshipName>Billboard_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>