objects/Billboard_Invoice_Line_Item__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Description</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Billboard Invoice Line Items</relationshipLabel>
    <relationshipName>Billboard_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>