objects/Billboard_Invoice_Line_Item__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Department</label>
    <referenceTo>GL_Department__c</referenceTo>
    <relationshipLabel>Billboard Invoice Line Items</relationshipLabel>
    <relationshipName>Billboard_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>